<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#CA3131"
    tools:context=".MainActivity5">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/DROIT"
        android:layout_alignLeft="@id/HAUT"
        android:layout_alignRight="@id/HAUT"
        android:backgroundTint="#19C7C1"
        android:text="@string/bas" />

    <Button
        android:id="@+id/DROIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/HAUT"
        android:backgroundTint="#8CFF5D"
        android:text="@string/droit" />

    <Button
        android:id="@+id/HAUT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FF683E"
        android:text="@string/haut" />
</RelativeLayout>